[package]
name = "render_staal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
papier = { version = "0.1.0", path = "../base" }
chrono = "0.4.33"
clap = "4.4.18"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
rand = "0.8.5"
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }
reqwest = "0.11.24"
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }
